# MeteoInterpolator

./: config.example.yaml  main.py  pyproject.toml
src/: aoi.py  datagaps.py  resample.py  runtime.py  utils.py  workflow.py
src/array/: base_grid.py  writer.py
src/array/writer/: __init__.py  base.py  tiff_writer.py  zarr_writer.py
src/database/: db.py
src/interpolate/: __init__.py  cv.py  interpolator.py  regions.py  residuals.py  vertical.py
src/meteo/: __init__.py  base.py  province.py  sensors.py  station.py
src/validate/: grid.py  meteo.py
tests/: test_grid_writer.py  test_zarr_writer.py
