[project]
name = "meteointerpolator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "httpx>=0.28.1",
    "netcdf4>=1.7.4",
    "pandas>=3.0.0",
    "pandera[pandas]>=0.28.1",
    "pyproj>=3.7.2",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "rioxarray>=0.20.0",
    "scikit-learn>=1.8.0",
    "xarray>=2025.12.0",
]
